Fix IE spacing bug

--- a/client/src/styles/PropertiesList.scss
+++ b/client/src/styles/PropertiesList.scss
@@ -32,10 +32,12 @@ $table-border-dark: 1px solid $dark;
       max-height: 30px;
       .rt-tr .rthfc-th-fixed.rthfc-th-fixed-left {
         position: fixed;
+        z-index: 5;
         // This display prop makes sure that the fixed table cells
         // fill up their entire allotted spaces
         display: list-item;
-        z-index: 5;
+        // This fixes a spacing issue on Internet Explorer
+        transform: translate3d(0px, 0px, 0px);
       }
 
       &.-headerGroups .rthfc-th-fixed {
